@@ -15,6 +15,8 @@ Version 0.4.25
 * Streamlined Chief talk scenes (removed Next).
 * Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.
 * Added a review/redo option to character creation in the intro.
+* Renamed FemmeBoy body type to Trap.
+* Added a Voluptous option for female start.
 
 --------------------------------------------
              PREVIOUS VERSIONS
